--- a/sh_ip_int_br.yml
+++ b/sh_ip_int_br.yml
@@ -1,8 +1,8 @@
 ---
 - name: Generate Cisco IOS OS Report
-  hosts: "{{ cisco_router }}"
-  connection: network_cli
-  port: 22
+  #hosts: "{{ cisco_router }}"
+  #connection: network_cli
+  #port: 22
   gather_facts: no
 
   tasks:
