--- a/sh_ip_int_br.yml
+++ b/sh_ip_int_br.yml
@@ -1,7 +1,7 @@
 ---
 - name: Generate Cisco IOS OS Report
   #hosts: "{{ cisco_router }}"
-  #connection: network_cli
+  connection: network_cli
   #port: 22
   gather_facts: no
 
