--- a/sh_ip_int_br.yml
+++ b/sh_ip_int_br.yml
@@ -1,6 +1,6 @@
 ---
 - name: Generate Cisco IOS OS Report
-  #hosts: "{{ cisco_router }}"
+  hosts: "{{ cisco_router }}"
   connection: network_cli
   #port: 22
   gather_facts: no
