--- a/sh_ip_int_br.yml
+++ b/sh_ip_int_br.yml
@@ -11,6 +11,10 @@
         authorize: yes
         commands:
           - show ip int br
+
+      register: print_output
+
+    -  debug: var=print_output.stdout_lines
             
   register: print_output
 - debug: var=print_output
